--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-ionic-keyboard": "2.0.5",
-    "cordova-plugin-ionic-webview": "1.1.19",
-    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "~2.3.1",
     "ionic-angular": "3.9.2",
@@ -52,7 +54,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
-    }
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {}
+    },
+    "platforms": [
+      "browser",
+      "android"
+    ]
   }
 }
