--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/status-bar": "4.7.0",
+    "@ionic-tools/emoji-picker": "^1.3.9",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
@@ -36,6 +37,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "~2.3.1",
+    "googleapis": "^27.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
